@@ -1,6 +1,6 @@
 {
-  "count": 33,
-  "uniques": 17,
+  "count": 34,
+  "uniques": 18,
   "views": [
     {
       "timestamp": "2022-03-23T00:00:00Z",
@@ -51,6 +51,11 @@
       "timestamp": "2022-04-03T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-04-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
